# Instagram-clone

./: .gitignore  SRS.ods  SRS.xlsx  manage.py  pyproject.toml  run_server.bat  run_server.py  temp.py
configs/: __init__.py  config.py
docs/: .gitignore
docs/source/: conf.py  index.rst  instagram_clone.asgi.rst  instagram_clone.rst  instagram_clone.settings.rst  instagram_clone.urls.rst  instagram_clone.user.admin.rst  instagram_clone.user.apps.rst  instagram_clone.user.models.rst  instagram_clone.user.rst  instagram_clone.user.serializers.rst  instagram_clone.user.urls.rst  instagram_clone.user.views.rst  instagram_clone.user_relationship.admin.rst  instagram_clone.user_relationship.apps.rst  instagram_clone.user_relationship.models.rst  instagram_clone.user_relationship.rst  instagram_clone.user_relationship.serializers.rst  instagram_clone.user_relationship.urls.rst  instagram_clone.user_relationship.views.rst  instagram_clone.wsgi.rst  modules.rst
instagram_clone/: asgi.py  settings.py  urls.py  wsgi.py
instagram_clone/content/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
instagram_clone/user/: admin.py  models.py  serializers.py  urls.py  views.py
instagram_clone/user_relationship/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tests/: runner.py
tests/tests_runtime_data/: data.py
tests/user/: load_data.json  test_users_api.py  test_users_manager.py
tests/user_relationship/: load_data.json  test_user_relationship_api.py
